fix line spacing to create consistency for and between unordered lists, h2 and h3 headers, and paragraphs.

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -193,8 +193,11 @@ img {
  * STUDY PLAN PAGE
  * ------------------------------------------------------------------------ */
 
+.header {
+  height: 100%;
+}
 #study-guide-heading {
-  height: 105px;
+  min-height: 105px;
   position: relative;
 }
 #study-guide-heading-content {
@@ -208,7 +211,7 @@ img {
 #what-you-know,
 #putting-it-together,
 #quiz {
-  height: 160px;
+  min-height: 160px;
 }
 #why-it-matters, #putting-it-together {
   background-color: #007a7c;
@@ -233,11 +236,9 @@ img {
 .content-description {
   position: relative;
   left: 30px;
-  /*margin-left: 130px;*/
   line-height: 1.2em;
-  /*width: 100%;
-  max-width: 90%;*/
   padding-right: 50px;
+  padding-bottom: 15px;
 }
 #why-it-matters .content-description,
 #quiz .content-description {
@@ -430,6 +431,14 @@ nav {
   width: 50px;
   font-size: 0.7em;
   vertical-align: middle;
+  background-color: #077fab;
+  color: #fff;
+  border: none;
+  border-radius: 0 2px 2px 0;
+  margin: 0 0 0 -5px;
+}
+.searchform #searchsubmit:hover {
+  background-color: #0897cb;
 }
 
 
@@ -702,7 +711,7 @@ span.small.xhtml {
   margin-bottom: 0em;
 }
 .content-header h2 {
-  margin-bottom: 0.25em;
+  margin-top: 2em;
 }
 .content-header a {
   text-decoration: underline;
@@ -730,6 +739,7 @@ div#wrap {
 	min-height: 8em !important;
   margin-top: 0;
   margin-bottom: 5px;
+  width: 100%;
 }
 #content h1 {
   font-size: 1.5em;
@@ -743,13 +753,15 @@ div#wrap {
 }
 #content h2 {
 	font-size: 1.25em;
-	margin-bottom: 1em;
+  margin-top: 33px;
+	margin-bottom: 22px;
   text-transform: uppercase;
 }
 #content h3 {
 	font-size: 1em;
 	text-transform: uppercase;
-	margin-top: 1em;
+  margin-top: 33px;
+	margin-bottom: 22px;
 	text-align: left;
   color: #6c64ad;
 }
@@ -770,6 +782,9 @@ div#wrap {
 	font-weight: 400;
 	text-transform: capitalize;
 	color: #6c64ad;
+}
+#content p {
+  margin-bottom: 15px;
 }
 #content img {
 	margin-top: 0.5em auto;
@@ -834,8 +849,11 @@ div#wrap {
   margin: 1em auto;
 }
 #content table {
-	margin: 1em 0;
+  display: table;
+  width: 90%;
+	margin: 1em auto;
   border: none;
+  background-color: #fff;
 }
 .wp-caption {
   background: #f5f5f5;
@@ -1025,6 +1043,11 @@ ul.lti-mapping {
 	.book-title {
 		font-size: 1em;
 	}
+}
+@media screen and (max-width: 768px) {
+  #wrap {
+    padding-top: 0;
+  }
 }
 @media screen and (max-width: 620px) {
 	.alt-formats {
